# ReDeX

./: README.md
EAGLE/Alarm/: Alarm.brd  Alarm.sch
EAGLE/Carriers/I2C/: I2C.brd  I2C.sch
EAGLE/Carriers/SPI/: SPI.brd  SPI.sch
EAGLE/Potentiostat/: Potentiostat.brd  Potentiostat.sch  TestBoard.brd  TestBoard.sch
EAGLE/Sensors/: Sensor IDs.txt
EAGLE/Sensors/Conductance/: Conductance.brd  Conductance.sch
EAGLE/Sensors/Temperature/: Temperature.brd  Temperature.sch
EAGLE/Sensors/pH/: pH.brd  pH.sch
Firmware/Alarm/: .cproject  .mxproject  .project  Alarm.ioc
Firmware/Alarm/Core/Inc/: main.h  stm32f0xx_it.h
Firmware/Alarm/Core/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
Firmware/Alarm/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
Firmware/Common/: assert.cpp  assert.h  averagingbuffer.h  delay.h  enum.h  hostinterface.cpp  hostinterface.h  staticstring.h  terminate.cpp  terminate.h
Firmware/ConductanceMaster/: .cproject  .mxproject  .project  ConductanceMaster.ioc  STM32F446RCTX_RAM.ld
Firmware/ConductanceMaster/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Firmware/ConductanceMaster/Core/Src/: main.c  stm32f4xx_hal_msp.c  (+1 more)
Firmware/ConductanceSlave/: .cproject  .mxproject  .project  ConductanceSlave.ioc  STM32L552RCTX_FLASH.ld
Firmware/Potentiostat/: .cproject  .mxproject  .project  Potentiostat.ioc
Firmware/SensorBoard/: .cproject  .mxproject  .project  SensorBoard.ioc
FreeCAD/Conductance/: Conductance.FCStd
FreeCAD/Hub/: Hub.FCStd  Label.FCStd  Logos.FCStd  Spacer.FCStd
FreeCAD/Other/: NodeHolder.FCStd  NodeMount.FCStd  Tube.FCStd
FreeCAD/Potentiostat/: Potentiostat.FCStd
FreeCAD/SensorBoard/: SensorBoard.FCStd
FreeCAD/Temperature/: Temperature.FCStd
FreeCAD/pH/: pH.FCStd
LabVIEW/ClientTest/: ReDeX.lvlib  Test.vi
LabVIEW/ClientTest/VIs/: Close.vi  Connect.vi  FilterVoltammetryData.vi  GetLastError.vi  RegisterConductanceEvent.vi  RegisterErrorEvent.vi  RegisterHubStatusEvent.vi  RegisterNodeInfoEvent.vi  RegisterNodeStatusEvent.vi  RegisterOrpEvent.vi  RegisterPhEvent.vi  RegisterPotentiostatEvent.vi  RegisterStatusEvent.vi  RegisterTemperatureEvent.vi  RegisterTestpointInfoEvent.vi  RequestNodeInfo.vi  RequestTestpointInfo.vi  StartMeasurement.vi  StartPowerMonitor.vi  StopMeasurement.vi  StopPowerMonitor.vi
LabVIEW/ClientTest/subvi/: Error Converter (ErrCode or Status).vi  SensorInfo.ctl
Software/Common/: assertions.cpp  assertions.h  averagingbuffer.h  elapsedtimer.cpp  elapsedtimer.h  exception.cpp  exception.h  macro.h  serialport.cpp  serialport.h  sincfilter.cpp  sincfilter.h  units.h
Software/ConductanceViewer/: ConductanceViewer.pro  ConductanceViewer.qrc  aboutdialog.ui  analysiswidget.cpp  analysiswidget.h  analysiswidget.ui  device.h  deviceselectiondialog.cpp  deviceselectiondialog.h  deviceselectiondialog.ui  devicewrapper.cpp  devicewrapper.h  include  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotwidget.cpp  plotwidget.h  sensorwrapper.cpp  sensorwrapper.h  setupwidget.cpp  setupwidget.h  setupwidget.ui
Software/ControlPanel/: ControlPanel.pro  configurationdialog.cpp  configurationdialog.h  configurationdialog.ui  exception.cpp  exception.h  logfiledialog.cpp  logfiledialog.h  logfiledialog.ui  macro.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Software/PotentiostatViewer/: PotentiostatViewer.pro  PotentiostatViewer.qrc  aboutdialog.ui  averagingbuffer.h  calibrationdialog.cpp  calibrationdialog.h  calibrationdialog.ui  device.h  devicelistener.cpp  devicelistener.h  fftplot.cpp  fftplot.h  fftwindow.cpp  fftwindow.h  fftwindow.ui  include  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotwidget.cpp  plotwidget.h  serialportwidget.cpp  settings.h  setupwidget.cpp  setupwidget.h  setupwidget.ui  signalfilter.cpp  signalfilter.h  sincfilter.h  storagewidget.cpp  storagewidget.h  storagewidget.ui
Software/PotentiostatViewer/CoSeSt2/: CoSeSt2.cpp  CoSeSt2.h
Software/SensorViewer/: SensorViewer.pro  aboutdialog.ui  include  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nonewidget.cpp  nonewidget.h  phwidget.cpp  phwidget.h  phwidget.ui  sensorwidget.h  serialportwidget.h  serialportwidget.ui  temperaturewidget.cpp  temperaturewidget.h
Software/TcpClient/: TcpClient.pro  TcpClient.qrc  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  device.cpp  device.h  include  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotwidget.cpp  plotwidget.h  plotwindow.cpp  plotwindow.h  plotwindow.ui  powerwindow.cpp  powerwindow.h  powerwindow.ui  testpointwidget.cpp  testpointwidget.h  testpointwidget.ui  units.h
Software/TcpServer/: TcpServer.pro  alarm.cpp  alarm.h  assertions.cpp  assertions.h  conductancenode.cpp  conductancenode.h  conductancesensor.cpp  conductancesensor.h  config.xml  configuration.cpp  configuration.h  devicemanager.cpp  devicemanager.h  devicerunner.cpp  devicerunner.h  lockfile.cpp  lockfile.h  logger.cpp  logger.h  macro.h  main.cpp  messagedispatcher.cpp  messagedispatcher.h  node.cpp  node.h  orpsensor.cpp  orpsensor.h  parsererror.h  phsensor.cpp  phsensor.h  potentiostatnode.cpp  potentiostatnode.h  potentiostatsensor.cpp  potentiostatsensor.h  powermonitor.cpp  powermonitor.h  protocol.cpp  protocol.h  sensor.cpp  (+13 more)
Software/TcpServer/include/: conductance  potentiostat  sensors
Software/libConductance/: CMakeLists.txt  analyzer.cpp  databuffer.cpp  device.cpp  deviceinfo.cpp
Software/libConductance/include/conductance/: analyzer.h  databuffer.h  device.h  deviceinfo.h  global.h
Software/libPotentiostat/: CMakeLists.txt  device.cpp  devicecalibrator.cpp
Software/libReDeX/: CMakeLists.txt  errorstring.cpp  errorstring.h  redex.cpp  redex_lv.cpp  sincfilter.cpp  tcpclient.cpp  tcpclient.h  tcpsocket.cpp  tcpsocket.h  voltammogramfilter.cpp  voltammogramfilter.h
Software/libReDeX/include/: redex.h  redex_lv.h
Software/libSensors/: CMakeLists.txt  device.cpp  serialport.cpp  serialport.h
Software/polkit-1/rules.d/: 99-redex.rules
Software/systemd/: redex-server.service
Software/udev/: 10-redex.rules
(+117 files in other folders)
